# ford_project

./: .gitignore  CMakeLists.txt  README.md  TODO  package.xml
camera_calibration/: gopro1080.yml  gopro1440.yml  kinect_rgb.yml
camera_calibration/gopro/: GoPro_calib_web.py
gazebo_models/curb/: model.config  model.sdf
gazebo_models/human_movable/: model.config  model.urdf
gazebo_models/simple_human/: model.config  model.sdf
gesture_data/: rejection_threshold.txt  temp_gesture0.txt  temp_gesture1.txt  temp_gesture3.txt  template0.txt  template1.txt  template2.txt  template3.txt  template4.txt  template5.txt
gesture_data/old/: rejection_threshold.txt  temp_gesture2.txt
human_traj/: traj1
include/ford_project/: exp_main_window.h  gesture_DTW.h  haptic_USB.h  haptic_test.h  imu_manager.h  video_processing.h  vision_aruco.h
launch/: IMU_teleop.launch  exp_control.launch  imu_haptic.launch  maze_world.launch  path_follow_sim.launch  simple_follower.launch  simple_follower_sim.launch  turtlebot_world.launch  video_process.launch  vision_test.launch
launch/includes/: kobuki.launch.xml
msg/: haptic_msg.msg
protocals/: pre_study_protocal.txt
scripts/: button_detect.py  fitEllipse.py  gesture_DTW.py  human_animation.py  imu_filter_Kalman.py  imu_teleop.py  keyboard_teleop.py  simple_follower.py  sm_follower.py  velocity_smoother.py  vision_test.py
src/: exp_control.cpp  exp_main_window.cpp  gesture_DTW.cpp  haptic_USB.cpp  haptic_test.cpp  haptic_test_PCI.cpp  imu_manager.cpp  video_processing.cpp  vision_aruco.cpp  vision_aruco.cpp.autosave
ui/: exp_main_window.ui
worlds/: actor.world  course.world  human_curb.world  human_maze.world  simple_human_maze.world  simple_human_static.world
